--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lottery-app",
+  "name": "lottery-lodibet",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +11,7 @@
     "clsx": "^2.1.1",
     "gh-pages": "^6.1.1",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "slot-machine-gen": "^1.3.5",
@@ -19,7 +20,7 @@
     "use-sound": "^4.0.3",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://harrytothemoon.github.io/lottery-app",
+  "homepage": "https://harrytothemoon.github.io/lottery-lodibet",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
